Currently, the Choose Icon dialog uses PathUnExpandEnvStringsW. The path textbox then has %systemroot% in the string while XP expands it. I've also found that using this patch now means that one can select an icon from shell32 for a shortcut and it actually works instead of being a white square (don't quote me on that ).
- blocks
-
CORE-10972 [shell32] Choose Icon dialog does not work
-
- Resolved
-
- relates to
-
CORE-9871 Change icon to shortcut show a white rectangle as result
-
- Resolved
-