[SHELL32] - Use ExpandEnvironmentStringsW instead of PathUnExpandEnvStringsW in the pick icon dialog. - Patch by Jared Smudde. CORE-10962

svn path=/trunk/; revision=72399